TUE-UpdateAddLoadingAnimation
